# core

core/: Dockerfile  pyproject.toml
core/cat/factory/: custom_llm.py  llm.py
core/cat/looking_glass/: agent_manager.py  prompts.py
