[project]
name = "Cheshire-Cat"
description = "Production ready AI assistant framework"
version = "1.7.0"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Piero Savastano" },
    { name = "Cheshire Cat AI Contributors" },
]
dependencies = [
    "gunicorn==22.0.0",
    "uvicorn[standard]==0.30.3",
    "python-multipart==0.0.9",
    "pydantic==2.8.2",
    "fastapi==0.111.1",
    "scalar-fastapi==1.0.2",
    "websockets==12.0",
    "PyJWT==2.8.0",
    "bcrypt==4.1.3",
    "Jinja2==3.1.4",
    "pandas==2.2.2",
    "scikit-learn==1.5.1",
    "qdrant_client==1.10.1",
    "langchain==0.2.10",
    "langchain-community==0.2.9",
    "langchain-openai==0.1.17",
    "langchain-google-genai==1.0.8",
    "langchain-cohere==0.1.9",
    "huggingface-hub==0.24.0",
    "beautifulsoup4==4.12.3",
    "pdfminer.six==20240706",
    "unstructured==0.15.0",
    "tiktoken==0.7.0",
    "tomli",
    "loguru==0.7.2",
    "anthropic==0.31.2",
    "text_generation==0.7.0",
    "tinydb==4.8.0",
    "python-slugify==8.0.4",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "fastembed==0.3.4",
    "rapidfuzz==3.9.4",
    "APScheduler==3.10.4",
    "ruff==0.4.7",
]

[tool.poetry]
package-mode = false

[tool.coverage.run]
source = ["cat"]

[tool.pylint]
max-line-length = 180
disable = [
    "C0301",
    "C0103",
    "C0114",
    "E0401",
    "C0115",
    "C0116",
    "E1101",
    "R0801",
    "C0202",
    "W0406",
    "W1514",
    "W0201",
    "W0511",
]

[tool.pylint.main]
load-plugins = "pylint_actions, perflint"
